@@ -139,8 +139,8 @@ For disks behind an Intel ICHxR controller with RST driver use
 \fB"/dev/csmi[0\-9],N"\fP where N specifies the port behind the logical
 scsi controller "\\\\.\\Scsi[0\-9]:".
 
-[NEW EXPERIMENTAL SMARTCTL FEATURE] For SATA disks behind an Areca SATA
-or SAS controller use \fB"/dev/arcmsr[0\-9]"\fP, see \'\-d areca,N[/E]\' below.
+[NEW EXPERIMENTAL SMARTCTL FEATURE] For SATA or SAS disks behind an Areca
+controller use \fB"/dev/arcmsr[0\-9]"\fP, see \'\-d areca,N[/E]\' below.
 
 The prefix \fB"/dev/"\fP is optional.
 .\" %ENDIF OS Windows Cygwin
@@ -505,11 +505,10 @@ error messages and no SMART information.
 
 .I areca,N/E
 \- [FreeBSD, Linux, Windows and Cygwin only] [NEW EXPERIMENTAL SMARTCTL FEATURE] the
-device consists of one or more SATA disks connected to an Areca SAS RAID controller.
+device consists of one or more SATA or SAS disks connected to an Areca SAS RAID controller.
 The integer N (range 1 to 128) denotes the channel (slot) and E (range
 1 to 8) denotes the enclosure.
-Important: This requires upcoming Areca SAS controller firmware version 1.51 or a
-recent beta version.
+Important: This requires Areca SAS controller firmware version 1.51 or later.
 
 .\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .\" %IF OS FreeBSD Linux
